classDiagram
class PreEditContext{
    selStart int32
    selEnd int32
    content std::wstring
}
class CompositionState{
    Begin
    Update
    End
}
class PreEditCallback

class PreEditRect{
    left int32
    top int32
    right int32
    bottom int32
}

class CandidateListContext{
    selection int32
    candidates list_wstring
}
class CandidateListState{
    Begin
    Update
    End
}
class CandidateListCallback

class CommitCallback

class ICallback{
    callback functional_F
    setCallback(functional_F)
    getCallback() functional_F
    runCallback(T...)
}
class Composition{
    setPreEditRect(PreEditRect)
    getPreEditRect() PreEditRect
    terminate()
}
class InputContext{
    comp Composition

    setActivated(bool)
    getActivated() bool
    setFullScreen(bool)
    getFullScreen() bool
}

class Locale{
    locale wstring
    name wstring
}
class InputProcessor{
    type InputProcessorType
    locale Locale
    name wstring

    setActivated()
}
class InputProcessorType{
    KeyboardLayout
    TextService
}
class InputProcessorState{
    InputModeUpdate
    FullUpdate
}
class InputProcessorContext{
    inputProcessor InputProcessor
    conv ConversionMode
    pun PuncuationMode
}
class Global{
    getActiveInputProcessor() InputProcessorContext
    getInputProcessors() list_InputProcessor
    getInputContext(...) InputContext
}

InputContext *-- Composition

PreEditCallback --> CompositionState
PreEditCallback --> PreEditContext
PreEditCallback ..|> ICallback

CandidateListCallback ..|> ICallback
CandidateListCallback --> CandidateListState
CandidateListCallback --> CandidateListContext

CommitCallback ..|> ICallback

Composition --|> PreEditCallback
Composition --|> CommitCallback
Composition --|> CandidateListCallback

InputProcessorCallback --> InputProcessorState
InputProcessorCallback --> InputProcessorContext
InputProcessorCallback ..|> ICallback

InputProcessor *-- InputProcessorType
InputProcessor --> Locale

InputProcessorContext --> InputProcessor

Global --> InputProcessorContext
Global --> InputProcessor
Global --|> InputProcessorCallback